# BitLens

./: CMakeLists.txt  README.md
.github/workflows/: macos.yml  style.yml  ubuntu.yml  windows.yml
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: BitLensConfig.cmake.in  BitViewConfig.cmake.in
include/: bit_lens.h  bit_view.h
test/: CMakeLists.txt  bit_lens.cpp  bit_view.cpp
test/source/: container.cpp  iterator.cpp  lens.cpp  readme.cpp  reference.cpp
